# opentrack

tracker-ballista/: CMakeLists.txt  ftnoir_tracker_ballista.cpp  ftnoir_tracker_ballista.h  ftnoir_tracker_ballista_controls.ui  ftnoir_tracker_ballista_dialog.cpp
tracker-ballista/lang/: nl_NL.ts  ru_RU.ts  zh_CN.ts
